--- a/src/locales/en-US/messages.po
+++ b/src/locales/en-US/messages.po
@@ -13,10 +13,18 @@ msgstr ""
 "Language-Team: \n"
 "Plural-Forms: \n"
 
-#: src/App.js:27
+#: src/App.js:31
 msgid "Current date and time are {0}"
 msgstr "Current date and time are {0}"
 
-#: src/App.js:23
+#: src/App.js:27
 msgid "This demo app was internationalized using LinguiJS"
 msgstr "This demo app was internationalized using LinguiJS"
+
+#: src/App.js:15
+msgid "logo"
+msgstr "logo"
+
+#: src/App.js:
+msgid "{0}"
+msgstr "{0}"
